Fix lower third spacing

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -698,7 +698,7 @@ th {
 }
 
 .lowerThird .lowerThirdContainer {
-  left: 10vw;
+  left: 8vw;
   width: 80vw;
   position: absolute;
   z-index: 5;
